--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ body {
 	background:url(black-marble.jpg) no-repeat center center;
 	height: 100vh;
 	display: table;
+	overflow:hidden;
 }
 .wrapper {
 	position:absolute;
