--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@ body {
 .wrapper {
 	position:absolute;
 	width: 30%;
-	animation:logomv 4s forwards;
+	top:45%;
+	left: 50%;
+	transform: translate(-50%,-50%);
 }
 @keyframes logomv {
 	0%{
@@ -76,6 +78,7 @@ path {
 }
 </style>
 <body>
+	<div class="wrapper">
 <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 540 412" style="enable-background:new 0 0 540 412;" xml:space="preserve">
 <style type="text/css">
@@ -98,5 +101,6 @@ path {
 </g>
 
 </svg>
+	</div>
 </body>
 </html>
