--- a/index.html
+++ b/index.html
@@ -1,106 +1,399 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>一綺喝奶茶🐈</title>
+    <title>一綺喝奶茶🐈</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/jq-gotop.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+    @import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
+
+    * {
+        font-family: 'Noto Sans TC';
+        box-sizing: border-box;
+    }
+
+    html {
+        scroll-behavior: smooth;
+    }
+
+    body {
+        margin: 0;
+    }
+
+    #menu-link {
+        display: block;
+    }
+
+    .topnav {
+        overflow: hidden;
+        background-color: #ffffff;
+    }
+
+    .topnav a {
+        float: left;
+        display: block;
+        color: #323237;
+        text-align: center;
+        padding: 19px 24px;
+        text-decoration: none;
+        transition: all 0.8s ease;
+    }
+
+    .topnav a:hover {
+        color: #f597a5;
+    }
+
+    .column {
+        float: left;
+        width: 100%;
+        background-image: linear-gradient(-20deg, #f794a4 0%, #fdd6bd 100%);
+        padding: 15px;
+    }
+
+    [class*="col-"] {
+        float: left;
+        padding: 15px;
+        margin-bottom: 20px;
+    }
+
+    .col-1 {
+        width: 8.33%;
+    }
+
+    .col-2 {
+        width: 16.66%;
+    }
+
+    .col-3 {
+        width: 25%;
+    }
+
+    .col-4 {
+        width: 33.33%;
+    }
+
+    .col-5 {
+        width: 41.66%;
+    }
+
+    .col-6 {
+        width: 50%;
+    }
+
+    .col-7 {
+        width: 58.33%;
+    }
+
+    .col-8 {
+        width: 66.66%;
+    }
+
+    .col-9 {
+        width: 75%;
+    }
+
+    .col-10 {
+        width: 83.33%;
+    }
+
+    .col-11 {
+        width: 91.66%;
+    }
+
+    .col-12 {
+        width: 100%;
+    }
+
+    .row {
+        margin-bottom: 20px;
+        min-height: 70vh;
+    }
+
+    .row:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+
+    .footer {
+        background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.25) 200%);
+        background-blend-mode: multiply;
+        color: #ffffff;
+        text-align: center;
+        font-size: 12px;
+        padding: 15px;
+    }
+
+    #logo {
+        width: auto;
+        height: 30px;
+        margin: 15px 25px;
+        float: left;
+        display: block;
+    }
+
+    path {
+        stroke: #FFF;
+        fill: #FFF;
+        stroke-dasharray: 1800;
+        opacity: 10;
+        animation: logo 2s cubic-bezier(0, 0.23, 1, 0.1) forwards;
+    }
+
+    @keyframes logo {
+        0% {
+            opacity: 0;
+            fill: none;
+            stroke-dashoffset: 1800;
+        }
+        30% {
+            opacity: 10;
+            fill: none;
+            stroke-dashoffset: 1800;
+        }
+        90% {
+            fill: rgba(000, 000, 000, 0);
+        }
+        100% {
+            opacity: 10;
+            fill: rgba(000, 000, 000, 1);
+            stroke-dashoffset: 0;
+        }
+    }
+
+    div.gallery {
+        border: 1px solid #ccc;
+        overflow: hidden;
+    }
+
+    div.gallery:hover {
+        border: 1px solid #777;
+    }
+
+    div.gallery img {
+        width: 100%;
+        height: auto;
+        transition: all 0.5s ease;
+    }
+
+    div.gallery:hover img {
+        transform: scale(1.2);
+    }
+
+    div.desc {
+        padding: 15px;
+        text-align: center;
+    }
+
+    h2 {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+
+    h2:after {
+        display: inline-block;
+        margin: 0 0 8px 20px;
+        height: 2px;
+        content: " ";
+        text-shadow: none;
+        background-color: #999;
+        width: 10vw;
+    }
+
+    h2:before {
+        display: inline-block;
+        margin: 0 20px 8px 0;
+        height: 2px;
+        content: " ";
+        text-shadow: none;
+        background-color: #999;
+        width: 10vw;
+    }
+    .about{
+      width:100%;
+      margin-left:40%;
+    }
+    .about span {
+      background:#000000;
+      color:#FFFFFF;
+      padding:5px 8px;
+      margin:10px 0px;
+      display: inline-block;
+    }
+    /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+
+    @media screen and (max-width:600px) {
+        [class*="col-"] {
+            width: 100%;
+        }
+        #logo {
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
+            margin: 15px 0px;
+        }
+        #menu-link {
+            display: none;
+            margin-top: 60px;
+        }
+        #menu-link a {
+            float: none;
+            width: 100%;
+        }
+        .menu {
+            display: inline-block;
+            cursor: pointer;
+            position: absolute;
+            left: 20px;
+            top: 15px;
+        }
+
+        .bar1,
+        .bar2,
+        .bar3 {
+            width: 25px;
+            height: 2px;
+            border-radius: 25px;
+            background-color: #333;
+            margin: 6px 0;
+            transition: 0.4s;
+        }
+
+        .change .bar1 {
+            -webkit-transform: rotate(-45deg) translate(-6px, 6px);
+            transform: rotate(-45deg) translate(-6px, 6px);
+        }
+
+        .change .bar2 {
+            opacity: 0;
+        }
+
+        .change .bar3 {
+            -webkit-transform: rotate(45deg) translate(-6px, -6px);
+            transform: rotate(45deg) translate(-6px, -6px);
+        }
+    }
+
+    @media only screen and (min-width: 768px) {
+        #menu-link {
+            display: block;
+        }
+    }
+    </style>
 </head>
-<style>
-html {
-	margin:0;
-	padding: 0;
-	width:100%;
-}
-body {
-	margin:0;
-	padding: 0;
-	width: 100%;
-	text-align: center;
-	background:url(black-marble.jpg) no-repeat center center;
-	height: 100vh;
-	display: table;
-	overflow:hidden;
-}
-.wrapper {
-	position:absolute;
-	width: 30%;
-	top:45%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-}
-@keyframes logomv {
-	0%{
-		top:45%;
-		left: 50%;
-		transform: translate(-50%,-50%);
-	}
-	80%{
-		top:45%;
-		left: 50%;
-		transform: translate(-50%,-50%) scale(1);
-	}
-	100%{
-		top:30px;
-		left: 30px;
-		transform: translate(-30%,-30%) scale(0.2);
 
-	}
-}
-
-path {
-	stroke: #FFF;
-	fill:#FFF;
-	stroke-dasharray: 1800;
-	opacity: 10;
-	animation: logo 2s cubic-bezier(0,0.23,1,0.1) forwards;
-}
-@keyframes logo {
-	0%{
-		opacity:0;
-		fill:none;
-		stroke-dashoffset:1800; 
-	}
-	30%{
-		opacity:10;
-		fill: none;
-		stroke-dashoffset:1800; 
-	}
-	90%{
-		fill:rgba(255,255,255,0);
-	}
-	100%{
-		opacity:10;
-		fill: rgba(255,255,255,1);
-		stroke-dashoffset:0; 
-
-	}
-
-}
-</style>
 <body>
-	<div class="wrapper">
-<svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 540 412" style="enable-background:new 0 0 540 412;" xml:space="preserve">
-<style type="text/css">
-	.st0{fill:none;stroke:#FFFFFF;stroke-width:3;stroke-miterlimit:10;}
-</style>
-<g>
-	<path class="st0" d="M190.5,195c7.5,16.5-0.5,35-10,54.5c-4,7.5-7,15-9,20.5c-3.5,9.5-8,10.5-18,5.5c-9-5.5-17.5-15-17.5-28.5
-		c0-6.5,2.5-16.5,11.5-37c5-10,8.5-19,6.5-21c-6-5-38.5,27.5-58.5,68c-10,20.5-15,41-15,56c0,22,9,35.5,22.5,36
-		c37.5,0.5,72-38,92-68c4.5-7.5,12-9.5,15-1c2.5,6.5,2.5,19.5-6.5,33.5c-19,30-59.5,54.5-98.5,55c-46,0.5-71.5-29-71.5-69
-		c0-18,5-38,15.5-58C74.5,190,114,163,143,163C161.5,163,182.5,180,190.5,195z"/>
-	<path class="st0" d="M316,369c-33,0-48-16.5-48-42.5c0-31.5,24.5-75,43.5-104.5c9.5-16.5,17-28.5,13.5-28.5
-		c-4.5,0-52,31.5-78.5,74.5c-17,28-35,62.5-47,92.5c-4,9-11.5,10.5-17.5,3c-8-9.5-15-21.5-2.5-54.5c20-52.5,119-220,159.5-272
-		c8-10,15.5-8,20,2c2.5,5.5,4,12,4,19c0,13.5-6,32-18,53c-10,16.5-41,63-46,70c15-11,32.5-17,42-17c14.5,0,29,15.5,29,35
-		c0,7-1.5,14-5.5,21c-27.5,49-40,70-45.5,82c-4.5,11-6.5,21.5-6.5,29.5c0,10.5,2.5,17,9.5,17c17.5,0,44-35.5,59-66
-		c3.5-7.5,11.5-8.5,15.5,0c2.5,6,6,17.5-1.5,32.5C380.5,344,348,369,316,369z"/>
-	<path class="st0" d="M415.5,368.5c-30.5,0-44-17.5-44-42.5c0-9.5,2-20,6-33c12.5-35,44.5-93,63-119c7.5-10,13.5-11,20-3.5
-		c9.5,10,13.5,31.5,0.5,56.5c-9.5,21.5-32.5,59-41,79c-4.5,11.5-7,22-7,30s2,12.5,7.5,12.5c20,0,46-33.5,61.5-67.5c4-9,10.5-8,15,1
-		c4.5,8.5,4,21-2.5,34C479.5,347.5,445,368.5,415.5,368.5z M479.5,113.5c14,0,27.5,18,27.5,32.5c0,13.5-7.5,25-20,25
-		c-16,0-29.5-15-29.5-30.5C457.5,126.5,468,113.5,479.5,113.5z"/>
-</g>
+    <div class="topnav">
+        <div class="menu" onclick="menu(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
+        <script>
+        function menu(y) {
+            y.classList.toggle('change');
+            var x = document.getElementById("menu-link");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
 
-</svg>
-	</div>
+        }
+        </script>
+        <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 540 412" style="enable-background:new 0 0 540 412;" xml:space="preserve">
+            <style type="text/css">
+            .st0 {
+                fill: none;
+                stroke: #323237;
+                stroke-width: 3;
+                stroke-miterlimit: 10;
+            }
+            </style>
+            <g>
+                <path class="st0" d="M167.8,172.5c7.5,16.5-0.5,35-10,54.5c-4,7.5-7,15-9,20.5c-3.5,9.5-8,10.5-18,5.5c-9-5.5-17.5-15-17.5-28.5
+    c0-6.5,2.5-16.5,11.5-37c5-10,8.5-19,6.5-21c-6-5-38.5,27.5-58.5,68c-10,20.5-15,41-15,56c0,22,9,35.5,22.5,36
+    c37.5,0.5,72-38,92-68c4.5-7.5,12-9.5,15-1c2.5,6.5,2.5,19.5-6.5,33.5c-19,30-59.5,54.5-98.5,55c-46,0.5-71.5-29-71.5-69
+    c0-18,5-38,15.5-58c25.5-51.5,65-78.5,94-78.5C138.8,140.5,159.8,157.5,167.8,172.5z" />
+                <path class="st0" d="M293.2,346.5c-33,0-48-16.5-48-42.5c0-31.5,24.5-75,43.5-104.5c9.5-16.5,17-28.5,13.5-28.5
+    c-4.5,0-52,31.5-78.5,74.5c-17,28-35,62.5-47,92.5c-4,9-11.5,10.5-17.5,3c-8-9.5-15-21.5-2.5-54.5c20-52.5,119-220,159.5-272
+    c8-10,15.5-8,20,2c2.5,5.5,4,12,4,19c0,13.5-6,32-18,53c-10,16.5-41,63-46,70c15-11,32.5-17,42-17c14.5,0,29,15.5,29,35
+    c0,7-1.5,14-5.5,21c-27.5,49-40,70-45.5,82c-4.5,11-6.5,21.5-6.5,29.5c0,10.5,2.5,17,9.5,17c17.5,0,44-35.5,59-66
+    c3.5-7.5,11.5-8.5,15.5,0c2.5,6,6,17.5-1.5,32.5C357.7,321.5,325.2,346.5,293.2,346.5z" />
+                <path class="st0" d="M392.7,346c-30.5,0-44-17.5-44-42.5c0-9.5,2-20,6-33c12.5-35,44.5-93,63-119c7.5-10,13.5-11,20-3.5
+    c9.5,10,13.5,31.5,0.5,56.5c-9.5,21.5-32.5,59-41,79c-4.5,11.5-7,22-7,30s2,12.5,7.5,12.5c20,0,46-33.5,61.5-67.5c4-9,10.5-8,15,1
+    c4.5,8.5,4,21-2.5,34C456.7,325,422.2,346,392.7,346z M456.7,91c14,0,27.5,18,27.5,32.5c0,13.5-7.5,25-20,25
+    c-16,0-29.5-15-29.5-30.5C434.7,104,445.2,91,456.7,91z" />
+            </g>
+        </svg>
+        <div id="menu-link">
+            <a href="#01">文宣海報</a>
+            <a href="#02">網頁設計</a>
+            <a href="http://www.cchi.me/blog/">烘焙甜點</a>
+            <a href="https://www.fb.com/Achi919" style="float:right;"><i style="font-size:24px" class="fa">&#xf082;</i></a>
+        </div>
+    </div>
+    <div class="row" style="background: url(images/about.png) no-repeat left bottom , linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);background-size: cover;height:90vh;">
+        <div class="col-12" id="about" style="height:100%;">
+            <div class="about">
+                <!-- <span>Hello!</span><br>
+                <span>我是陳綺</span><br>
+                <span>目前是名大學生，雖然有張成(cào)熟(lǎo)的臉，但卻是貨真價實的大學生🙃</span><br>
+                <span>『佈置』網頁就像女生愛買化妝品一樣，永無止境。</span> -->
+            </div>
+        </div>
+    </div>
+    <div class="row" id="01">
+        <h2>文宣海報作品</h2>
+        <div class="col-4">
+            <div class="gallery">
+                <img src="images/graphic1.jpg" alt="Cinque Terre" width="600" height="400">
+                <div class="desc">三折頁DM設計</div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="gallery">
+                <img src="images/tbc.jpg" alt="Cinque Terre" width="600" height="400">
+                <div class="desc">to be continued</div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="gallery">
+                <img src="images/tbc.jpg" alt="Cinque Terre" width="600" height="400">
+                <div class="desc">to be continued</div>
+            </div>
+        </div>
+    </div>
+    <div class="row" id="02">
+        <h2>網頁設計作品</h2>
+        <div class="col-4">
+            <div class="gallery">
+                <img src="images/web1.jpg" alt="活動報名頁面" width="600" height="400">
+                <div class="desc">活動報名頁面</div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="gallery">
+                <img src="images/web2.jpg" alt="Cinque Terre" width="600" height="400">
+                <div class="desc">活動報名頁面</div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="gallery">
+                <img src="images/tbc.jpg" alt="Cinque Terre" width="600" height="400">
+                <div class="desc">to be continued</div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <p><a href="mailto:chi@cchi.me" style="text-decoration: none;color:#FFF;">Chi Chen</a> © 2018</p>
+    </div>
 </body>
+
 </html>
