--- a/index.html
+++ b/index.html
@@ -374,6 +374,12 @@
         <h2>網頁設計作品</h2>
         <div class="col-4">
             <div class="gallery">
+                <img src="images/web3.jpg" alt="Cinque Terre" width="600" height="400">
+                <div class="desc">班級通訊錄-106資管人</div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="gallery">
                 <img src="images/web1.jpg" alt="活動報名頁面" width="600" height="400">
                 <div class="desc">活動報名頁面</div>
             </div>
@@ -382,12 +388,6 @@
             <div class="gallery">
                 <img src="images/web2.jpg" alt="Cinque Terre" width="600" height="400">
                 <div class="desc">活動報名頁面</div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="gallery">
-                <img src="images/tbc.jpg" alt="Cinque Terre" width="600" height="400">
-                <div class="desc">to be continued</div>
             </div>
         </div>
     </div>
