--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                 <div class="desc">活動報名頁面</div>
             </div>
         </div>
+        <div class="col-4">
+            <div class="gallery">
+                <img src="images/web2.jpg" width="600" height="400">
+                <div class="desc">活動報名頁面</div>
+            </div>
+        </div>
         
     </div>
     <div class="footer">
