--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
     </div>
     <div class="row" style="background: url(images/about.png) no-repeat left bottom , linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);background-size: cover;height:90vh;">
         <div class="col-12" id="about" style="height:100%;">
-            <div class="about">
-                <!-- <span>Hello!</span><br>
+            <!-- <div class="about">
+                <span style="font-size: 40px">About Chi</span><br>
                 <span>我是陳綺</span><br>
                 <span>目前是名大學生，雖然有張成(cào)熟(lǎo)的臉，但卻是貨真價實的大學生🙃</span><br>
-                <span>『佈置』網頁就像女生愛買化妝品一樣，永無止境。</span> -->
-            </div>
+                <span>『佈置』網頁就像女生愛買化妝品一樣，永無止境。</span>
+            </div> -->
         </div>
     </div>
     <div class="row" id="01">
