--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </g>
         </svg>
         <div id="menu-link">
-            <a href="#01">文宣海報</a>
-            <a href="#02">網頁設計</a>
+            <a href="#graphic">文宣海報</a>
+            <a href="#web">網頁設計</a>
             <a href="http://www.cchi.me/blog/">烘焙甜點</a>
             <a href="https://www.fb.com/Achi919" style="float:right;"><i style="font-size:24px" class="fa">&#xf082;</i></a>
         </div>
@@ -72,7 +72,7 @@
             </div> -->
         </div>
     </div>
-    <div class="row" id="01">
+    <div class="row" id="graphic">
         <h2>文宣海報作品</h2>
         <div class="col-4">
             <div class="gallery">
@@ -93,7 +93,7 @@
             </div>
         </div>
     </div>
-    <div class="row" id="02">
+    <div class="row" id="web">
         <h2>網頁設計作品</h2>
         <div class="col-4">
             <div class="gallery">
