--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
     <div class="row" style="background: url(images/about.png) no-repeat left bottom , linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);background-size: cover;height:90vh;">
         <div class="col-12" id="about" style="height:100%;">
             <div class="about">
-                <span style="font-size: 40px">About Chi</span><br>
-                <span>我是陳綺</span><br>
-                <span>目前是名大學生，雖然有張成(cào)熟(lǎo)的臉，但卻是貨真價實的大學生🙃</span><br>
-                <span>『佈置』網頁就像女生愛買化妝品一樣，永無止境。</span>
+                <span style="font-size: 40px">Self-introduction</span><br>
+                <span style="font-size: 22px">Hello ! 我是陳綺</span><br>
+                <span>目前是名大學生，雖然有張<s>成(cào)熟(lǎo)</s>的臉，但卻是貨真價實的大二生🙃</span><br>
+                <span>因為愛喝奶茶又喜歡貓咪，所以養了一隻米克斯並取名『奶茶』🐈</span><br><hr>
+                <span>對我來說網頁設計就像女生愛買的化妝品一樣，總好像少了些什麼？絞盡腦汁的Coding到一發不可收拾。</span>
             </div>
         </div>
     </div>
