--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <a href="https://www.fb.com/Achi919" style="float:right;"><i style="font-size:24px" class="fa">&#xf082;</i></a>
         </div>
     </div>
-    <div class="row" style="background: url(images/about.png) no-repeat left bottom , linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);background-size: cover;height:90vh;">
-        <div class="col-12" id="about" style="height:100%;">
+    <div class="row" style="background: url(images/about.png) no-repeat left bottom , linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);background-size: cover;height:90vh;" id="about">
+        <div class="col-12" style="height:100%;">
             <div class="about">
                 <span style="font-size: 40px">Self-introduction</span><br>
                 <span style="font-size: 22px">Hello ! 我是陳綺</span><br>
