--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <title>一綺喝奶茶🐈</title>
@@ -9,6 +9,8 @@
     <script src="js/jq-gotop.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="apple-touch-icon" sizes="192x192" href="images/b.png">
+    <link rel="icon" href="images/b.png" sizes="16x16" type="image/png">
 </head>
 
 <body>
@@ -65,10 +67,15 @@
     <div class="row" style="background: url(images/about.png) no-repeat left bottom , linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);background-size: cover;height:90vh;" id="about">
         <div class="col-12" style="height:100%;">
             <div class="about">
-                <span style="font-size: 40px">Self-introduction</span><br>
-                <span style="font-size: 22px">Hello ! 我是陳綺</span><br>
-                <span>目前是名大學生，雖然有張<s>成(cào)熟(lǎo)</s>的臉，但卻是貨真價實的大二生🙃</span><br>
-                <span>因為愛喝奶茶又喜歡貓咪，所以養了一隻米克斯並取名『奶茶』🐈</span><br><hr>
+                <span style="font-size: 40px">Self-introduction</span>
+                <br>
+                <span style="font-size: 22px">Hello ! 我是陳綺</span>
+                <br>
+                <span>目前是名大學生，雖然有張<s>成(cào)熟(lǎo)</s>的臉，但卻是貨真價實的大二生🙃</span>
+                <br>
+                <span>因為愛喝奶茶又喜歡貓咪，所以養了一隻米克斯並取名『奶茶』🐈</span>
+                <br>
+                <hr>
                 <span>對我來說網頁設計就像女生愛買的化妝品一樣，總好像少了些什麼？絞盡腦汁的Coding到一發不可收拾。</span>
             </div>
         </div>
@@ -120,7 +127,6 @@
                 <div class="desc">活動報名頁面</div>
             </div>
         </div>
-        
     </div>
     <div class="footer">
         <p><a href="mailto:chi@cchi.me" style="text-decoration: none;color:#FFF;">Chi Chen</a> © 2018</p>
