--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/jq-gotop.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="apple-touch-icon" sizes="192x192" href="images/b.png">
+    <link rel="apple-touch-icon" href="images/b.png">
     <link rel="icon" href="images/b.png" sizes="16x16" type="image/png">
 </head>
 
