--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="apple-touch-icon" href="images/b.png">
     <link rel="icon" href="images/b.png" sizes="16x16" type="image/png">
+    <meta property="og:image" content="images/og.png">
 </head>
 
 <body>
