--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <a href="https://www.fb.com/Achi919" style="float:right;"><i style="font-size:24px" class="fa">&#xf082;</i></a>
         </div>
     </div>
-    <div class="row" style="background: url(images/about.png) no-repeat left bottom , linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);background-size: cover;height:90vh;" id="about">
+    <div class="row" style="background: url(images/about.png) no-repeat left bottom , linear-gradient(to right, #ffc3a0 0%, #ffafbd 100%);background-size: cover;height:90vh;min-height: 600px;" id="about">
         <div class="col-12" style="height:100%;">
             <div class="about">
                 <span style="font-size: 40px">Self-introduction</span>
