--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
     </div>
     <div class="footer">
-        <p><a href="mailto:chi@cchi.me" style="text-decoration: none;color:#FFF;">Chi Chen</a> © 2018</p>
+        <p style="text-shadow: 0 0 3px #FFF;"><a href="mailto:chi@cchi.me" style="text-decoration: none;color:#FFF;">Chi Chen</a> © 2018</p>
     </div>
 </body>
 
