新增海報作品

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <div id="menu-link" class="menu-link">
             <a href="#graphic">文宣海報</a>
             <a href="#web">網頁設計</a>
-            <a href="http://www.cchi.me/blog/">烘焙甜點</a>
+            <a href="#">還沒想到</a>
+            <a href="#">要放什麼</a>
             <a href="https://www.fb.com/Achi919" style="float:right;"><i style="font-size:24px" class="fa">&#xf082;</i></a>
         </div>
     </div>
@@ -97,8 +98,8 @@
         </div>
         <div class="col-4">
             <div class="gallery">
-                <div class="mask"><img src="images/tbc.jpg" width="600" height="400"></div>
-                <div class="desc">to be continued</div>
+                <div class="mask"><img src="images/graphic3.jpg" width="600" height="400"></div>
+                <div class="desc">招生說明會傳單</div>
             </div>
         </div>
     </div>
@@ -136,7 +137,7 @@
         </div>
     </div>
     <div class="footer">
-        <p style="text-shadow: 0 0 3px #FFF;"><a href="mailto:chi@cchi.me" style="text-decoration: none;color:#FFF;">Chi Chen</a> © 2018</p>
+        <p style="text-shadow: 0 0 3px #FFF;"><a href="mailto:0624003@nkust.edu.tw" style="text-decoration: none;color:#FFF;">Chi Chen</a> © 2018</p>
     </div>
 </body>
 
