--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             <div class="bar3"></div>
         </div>
         <script>
-        function menu(y) {
-            y.classList.toggle('change');
-            var x = document.getElementById("menu-link");
-            if (x.className === "menu-link") {
-                x.className += " responsive";
-            } else {
-                x.className = "menu-link";
-            }
+            function menu(y) {
+                y.classList.toggle('change');
+                var x = document.getElementById("menu-link");
+                if (x.className === "menu-link") {
+                    x.className += " responsive";
+                } else {
+                    x.className = "menu-link";
+                }
 
-        }
+            }
         </script>
         <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 540 412" style="enable-background:new 0 0 540 412;" xml:space="preserve" onclick="location.href='http://ch1.tw/'">
             <style type="text/css">
@@ -73,7 +73,7 @@
                 <br>
                 <span style="font-size: 22px">Hello ! 我是陳綺</span>
                 <br>
-                <span>目前是名大學生，雖然有張<s>成(cào)熟(lǎo)</s>的臉，但卻是貨真價實的大二生🙃</span>
+                <span>目前是名大學生三年級，最近為了還沒找到實習而感到煩惱🙃</span>
                 <br>
                 <span>因為愛喝奶茶又喜歡貓咪，所以養了一隻米克斯並取名『奶茶』🐈</span>
                 <br>
@@ -84,57 +84,57 @@
     </div>
     <div class="row" id="graphic">
         <h2>文宣海報作品</h2>
-        <div class="col-4">
-            <div class="gallery">
-                <div class="mask"><img src="images/graphic1.jpg" width="600" height="400"></div>
-                <div class="desc">三折頁DM設計</div>
-            </div>
+
+        <div class="gallery col-4">
+            <div class="mask"><img src="images/graphic1.jpg" width="600" height="400"></div>
+            <div class="desc">三折頁DM設計</div>
         </div>
-        <div class="col-4">
-            <div class="gallery">
-                <div class="mask"><img src="images/graphic2.jpg" width="600" height="400"></div>
-                <div class="desc">專題成果展海報</div>
-            </div>
+
+
+        <div class="gallery col-4">
+            <div class="mask"><img src="images/graphic2.jpg" width="600" height="400"></div>
+            <div class="desc">專題成果展海報</div>
         </div>
-        <div class="col-4">
-            <div class="gallery">
-                <div class="mask"><img src="images/graphic3.jpg" width="600" height="400"></div>
-                <div class="desc">招生說明會傳單</div>
-            </div>
+
+        <div class="gallery col-4">
+            <div class="mask"><img src="images/graphic3.jpg" width="600" height="400"></div>
+            <div class="desc">招生說明會傳單</div>
         </div>
     </div>
     <div class="row" id="web">
         <h2>網頁設計作品</h2>
-        <div class="col-4">
-            <div class="gallery">
-                    <div class="mask"><img src="images/web3.jpg" width="600" height="400"></div>
-                <div class="desc">班級通訊錄-106資管人</div>
-            </div>
+
+        <div class="gallery col-4">
+            <div class="mask"><img src="images/web3.jpg" width="600" height="400"></div>
+            <div class="desc">班級通訊錄-106資管人</div>
         </div>
-        <div class="col-4">
-            <div class="gallery">
-                    <div class="mask"><img src="images/web4.jpg" width="600" height="400"></div>
-                <div class="desc">抽籤小工具-交換禮物</div>
-            </div>
+
+
+        <div class="gallery col-4">
+            <div class="mask"><img src="images/web4.jpg" width="600" height="400"></div>
+            <div class="desc">抽籤小工具-交換禮物</div>
         </div>
-        <div class="col-4">
-            <div class="gallery">
-                    <div class="mask"><img src="images/web5.jpg" width="600" height="400"></div>
-                <div class="desc">3D列印車牌產生器</div>
-            </div>
+
+        <div class="gallery col-4">
+            <div class="mask"><img src="images/web5.jpg" width="600" height="400"></div>
+            <div class="desc">3D列印車牌產生器</div>
         </div>
-        <div class="col-4">
-            <div class="gallery">
-                    <div class="mask"><img src="images/web1.jpg" width="600" height="400"></div>
-                <div class="desc">活動報名頁面</div>
-            </div>
+
+        <div class="gallery col-4">
+            <div class="mask"><img src="images/web1.jpg" width="600" height="400"></div>
+            <div class="desc">活動報名頁面</div>
         </div>
-        <div class="col-4">
-            <div class="gallery">
-                    <div class="mask"><img src="images/web2.jpg" width="600" height="400"></div>
-                <div class="desc">活動報名頁面</div>
-            </div>
+
+        <div class="gallery col-4">
+            <div class="mask"><img src="images/web2.jpg" width="600" height="400"></div>
+            <div class="desc">活動報名頁面</div>
         </div>
+
+        <div class="gallery col-4" onclick="window.location='http://ch1.tw/css3'">
+            <div class="mask"><img src="images/web6.jpg" width="600" height="400"></div>
+            <div class="desc">網頁動畫基礎教學</div>
+        </div>
+
     </div>
     <div class="footer">
         <p style="text-shadow: 0 0 3px #FFF;"><a href="mailto:0624003@nkust.edu.tw" style="text-decoration: none;color:#FFF;">Chi Chen</a> © 2018</p>
