--- a/index.html
+++ b/index.html
@@ -85,54 +85,72 @@
     <div class="row" id="graphic">
         <h2>文宣海報作品</h2>
 
-        <div class="gallery col-4">
-            <div class="mask"><img src="images/graphic1.jpg" width="600" height="400"></div>
-            <div class="desc">三折頁DM設計</div>
+        <div class="col-4">
+            <div class="gallery">
+                <div class="mask"><img src="images/graphic1.jpg" width="600" height="400"></div>
+                <div class="desc">三折頁DM設計</div>
+            </div>
         </div>
 
 
-        <div class="gallery col-4">
-            <div class="mask"><img src="images/graphic2.jpg" width="600" height="400"></div>
-            <div class="desc">專題成果展海報</div>
+        <div class="col-4">
+            <div class="gallery">
+                <div class="mask"><img src="images/graphic2.jpg" width="600" height="400"></div>
+                <div class="desc">專題成果展海報</div>
+            </div>
         </div>
 
-        <div class="gallery col-4">
-            <div class="mask"><img src="images/graphic3.jpg" width="600" height="400"></div>
-            <div class="desc">招生說明會傳單</div>
+        <div class="col-4">
+            <div class="gallery">
+                <div class="mask"><img src="images/graphic3.jpg" width="600" height="400"></div>
+                <div class="desc">招生說明會傳單</div>
+            </div>
         </div>
     </div>
     <div class="row" id="web">
         <h2>網頁設計作品</h2>
 
-        <div class="gallery col-4">
-            <div class="mask"><img src="images/web3.jpg" width="600" height="400"></div>
-            <div class="desc">班級通訊錄-106資管人</div>
+        <div class="col-4">
+            <div class="gallery">
+                <div class="mask"><img src="images/web3.jpg" width="600" height="400"></div>
+                <div class="desc">班級通訊錄-106資管人</div>
+            </div>
         </div>
 
 
-        <div class="gallery col-4">
-            <div class="mask"><img src="images/web4.jpg" width="600" height="400"></div>
-            <div class="desc">抽籤小工具-交換禮物</div>
+        <div class="col-4">
+            <div class="gallery">
+                <div class="mask"><img src="images/web4.jpg" width="600" height="400"></div>
+                <div class="desc">抽籤小工具-交換禮物</div>
+            </div>
         </div>
 
-        <div class="gallery col-4">
-            <div class="mask"><img src="images/web5.jpg" width="600" height="400"></div>
-            <div class="desc">3D列印車牌產生器</div>
+        <div class="col-4">
+            <div class="gallery">
+                <div class="mask"><img src="images/web5.jpg" width="600" height="400"></div>
+                <div class="desc">3D列印車牌產生器</div>
+            </div>
         </div>
 
-        <div class="gallery col-4">
-            <div class="mask"><img src="images/web1.jpg" width="600" height="400"></div>
-            <div class="desc">活動報名頁面</div>
+        <div class="col-4">
+            <div class="gallery">
+                <div class="mask"><img src="images/web1.jpg" width="600" height="400"></div>
+                <div class="desc">活動報名頁面</div>
+            </div>
         </div>
 
-        <div class="gallery col-4">
-            <div class="mask"><img src="images/web2.jpg" width="600" height="400"></div>
-            <div class="desc">活動報名頁面</div>
+        <div class="col-4">
+            <div class="gallery">
+                <div class="mask"><img src="images/web2.jpg" width="600" height="400"></div>
+                <div class="desc">活動報名頁面</div>
+            </div>
         </div>
 
-        <div class="gallery col-4" onclick="window.location='http://ch1.tw/css3'">
-            <div class="mask"><img src="images/web6.jpg" width="600" height="400"></div>
-            <div class="desc">網頁動畫基礎教學</div>
+        <div class="col-4">
+            <div class="gallery" onclick="window.location='http://ch1.tw/css3'">
+                <div class="mask"><img src="images/web6.jpg" width="600" height="400"></div>
+                <div class="desc">網頁動畫基礎教學</div>
+            </div>
         </div>
 
     </div>
