--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
 
         <div class="col-4">
-            <div class="gallery" onclick="window.location='http://ch1.tw/css3'">
+            <div class="gallery" onclick="window.location='http://ch1.tw/css3'" style="cursor:pointer;">
                 <div class="mask"><img src="images/web6.jpg" width="600" height="400"></div>
                 <div class="desc">網頁動畫基礎教學</div>
             </div>
