新增網頁設計作品

--- a/index.html
+++ b/index.html
@@ -153,6 +153,20 @@
             </div>
         </div>
 
+        <div class="col-4">
+            <div class="gallery" onclick="window.location='http://line.me/ti/p/@txu9237u'" style="cursor:pointer;">
+                <div class="mask"><img src="images/web7.jpg" width="600" height="400"></div>
+                <div class="desc">migo叫車表單</div>
+            </div>
+        </div>
+
+        <div class="col-4">
+            <div class="gallery">
+                <div class="mask"><img src="images/web8.jpg" width="600" height="400"></div>
+                <div class="desc">課程說明頁面</div>
+            </div>
+        </div>
+
     </div>
     <div class="footer">
         <p style="text-shadow: 0 0 3px #FFF;"><a href="mailto:0624003@nkust.edu.tw" style="text-decoration: none;color:#FFF;">Chi Chen</a> © 2019</p>
