--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>一綺喝奶茶🐈</title>
+    <title>綺綺孵蛋中🐣</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -73,12 +73,12 @@
                 <br>
                 <span style="font-size: 22px">Hello ! 我是陳綺</span>
                 <br>
-                <span>目前是名大學生三年級，最近為了還沒找到實習而感到煩惱🙃</span>
+                <span>因為愛喝奶茶又喜歡貓咪，所以在2015年開始養了一隻米克斯並取名<u>奶茶</u>🐈</span>
                 <br>
-                <span>因為愛喝奶茶又喜歡貓咪，所以養了一隻米克斯並取名『奶茶』🐈</span>
+                <span>2022/4 爸爸又撿回來一隻米克斯，名叫<u>米漿</u>🐱</span>
                 <br>
                 <hr>
-                <span>對我來說網頁設計就像女生愛買的化妝品一樣，總好像少了些什麼？絞盡腦汁的Coding到一發不可收拾。</span>
+                <span>2024家裡即將迎接新成員囉——孵蛋中🥚</span>
             </div>
         </div>
     </div>
@@ -169,7 +169,7 @@
 
     </div>
     <div class="footer">
-        <p style="text-shadow: 0 0 3px #FFF;"><a href="mailto:0624003@nkust.edu.tw" style="text-decoration: none;color:#FFF;">Chi Chen</a> © 2019</p>
+        <p style="text-shadow: 0 0 3px #FFF;"><a href="mailto:0624003@nkust.edu.tw" style="text-decoration: none;color:#FFF;">Chi Chen</a> © 2024</p>
     </div>
 </body>
 
